frontend/customer/test_report_final.txt

> customer@0.1.0 test
> jest

(node:11888) [DEP0040] DeprecationWarning: The `punycode` module is deprecated. Please use a userland alternative instead.
(Use `node --trace-deprecation ...` to show where the warning was created)
PASS src/__tests__/build/config.test.ts
FAIL src/components/dashboard/DashboardLayout.test.tsx
   Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
      If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
      If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
      To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
      If you need a custom transformation specify a "transform" option in your config.
      If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    C:\Projects\nordic-bank\frontend\customer\node_modules\next-intl\dist\esm\production\index.react-client.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){export{useFormatter,useTranslations}from"./react-client/index.js";export{default as NextIntlClientProvider}from"./shared/NextIntlClientProvider.js";export{IntlProvider,_useExtracted as useExtracted,useLocale,useMessages,useNow,useTimeZone}from"use-intl/react";export*from"use-intl/core";
                                                                                      ^^^^^^

    SyntaxError: Unexpected token 'export'

      12 |     locale: string;
      13 |     isOpen?: boolean;
    > 14 |     onClose?: () => void;
         |                   ^
      15 | }
      16 |
      17 | export default function Sidebar({ locale, isOpen = true, onClose }: SidebarProps) {

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1505:14)
      at Object.<anonymous> (src/components/dashboard/Sidebar.tsx:14:19)
      at Object.<anonymous> (src/components/dashboard/DashboardLayout.tsx:16:57)
      at Object.<anonymous> (src/components/dashboard/DashboardLayout.test.tsx:20:65)

(node:23412) [DEP0040] DeprecationWarning: The `punycode` module is deprecated. Please use a userland alternative instead.
(Use `node --trace-deprecation ...` to show where the warning was created)
FAIL src/app/[locale]/login/LoginContent.test.tsx
   Test suite failed to run

    Cannot find module '../LoginContent' from 'src/app/[locale]/login/LoginContent.test.tsx'

      43 | describe('LoginContent - Input Flexibility Tests', () => {
      44 |     const mockPush = jest.fn();
    > 45 |     const mockLogin = jest.fn();
         |                                                              ^
      46 |
      47 |     beforeEach(() => {
      48 |         jest.clearAllMocks();

      at Resolver._throwModNotFoundError (node_modules/jest-resolve/build/resolver.js:427:11)
      at Object.<anonymous> (src/app/[locale]/login/LoginContent.test.tsx:45:62)

(node:23148) [DEP0040] DeprecationWarning: The `punycode` module is deprecated. Please use a userland alternative instead.
(Use `node --trace-deprecation ...` to show where the warning was created)
(node:28332) [DEP0040] DeprecationWarning: The `punycode` module is deprecated. Please use a userland alternative instead.
(Use `node --trace-deprecation ...` to show where the warning was created)
PASS src/app/[locale]/register/RegisterContent.test.tsx (11.597 s)

Test Suites: 2 failed, 2 passed, 4 total
Tests:       11 passed, 11 total
Snapshots:   0 total
Time:        12.729 s
Ran all test suites.
